--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 </head>
 <body >
     <div class="mainContainer bg-danger position-absolute top-50 start-50 " >
-        <div class="firstContainer  position-relative">
-            <p class="text-primary text-center h6 text-light dd "> soorarai Pottru</p>
+        <div class="firstContainer  position-relative border-0">
+            <p id="movieName" class="text-primary text-center h6 text-light ">Maanadu</p>
             <div class="imgContainer bg-light position-absolute top-50 start-50 border border-4 border-light">
-                <img class =" ss" src="photo/movie1.jpg" alt="">
+                <img id="moviePhoto" src="photo/movie0.jpg" alt="">
             </div>
-            <div class="detailContainer bg-danger position-absolute top-100">
-                <p class="how text-light text-center pt-1">How was this movie?</p>
-                <div class="buttonContainer bg-danger d-flex justify-content-between ms-2 me-2 ">
-                        <button id="star1" class="fa bg-danger fa-star-o p-0 border-0"></button>
-                        <button id="star2" class="fa bg-danger fa-star-o p-0 border-0 "></button>
-                        <button id="star3" class="fa bg-danger fa-star-o p-0 border-0"></button>
-                        <button id="star4" class="fa bg-danger fa-star-o p-0 border-0"></button>
-                        <button id="star5" class="fa bg-danger fa-star-o p-0 border-0"></button>
+        </div>
+        <div class="detailContainer bg-danger">
+            <p class="how text-light text-center pt-2 ">How was this movie?</p>
+                <div class="buttonContainer bg-danger d-flex justify-content-between m-2 ">
+                    <button id="star1" class="fa bg-danger fa-star-o p-0 border-0"></button>
+                    <button id="star2" class="fa bg-danger fa-star-o p-0 border-0"></button>
+                    <button id="star3" class="fa bg-danger fa-star-o p-0 border-0"></button>
+                    <button id="star4" class="fa bg-danger fa-star-o p-0 border-0"></button>
+                    <button id="star5" class="fa bg-danger fa-star-o p-0 border-0"></button>
                 </div>
-                <p class="give text-light container-fluid position-absolute top-100 start-50 pb-1 ">Give your valuable reviews here by tap the star</p>
-                <button class="sumit position-absolute top-100 border-0 btn btn-success rounded-0 text-dark">
-                    <p class="submit">Submit</p>
-                </button>
-            </div>
-
+            <p class="give text-light container-fluid pb-1 m-0">Give your valuable reviews here by tap the star</p>
+            <button id="submit" class="submit  border-0 btn btn-success rounded-0 text-dark">
+                <p class="m-0">Submit</p>
+            </button>
+        </div>
     </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
