--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="firstContainer  position-relative border-0">
             <p id="movieName" class="text-primary text-center h6 text-light ">Maanadu</p>
             <div class="imgContainer bg-light position-absolute top-50 start-50 border border-4 border-light">
-                <img id="moviePhoto" src="photo/movie0.jpg" alt="">
+                <img id="moviePhoto" src="/photo/movie0.jpg" alt="">
             </div>
         </div>
         <div class="detailContainer bg-danger">
